test/error/sema/static-field-assign-type-mismatch.dsk
struct S
    let mut x: int = 0
    y: string
end

let s = S(y = "hello")
S.x = "hello"
